# dotnet-helpers-v2

./: .gitignore  Cargo.toml  readme.md
src/: app.rs  handlers.rs  main.rs  ui.rs
src/commands/: generate_faker_from_entity.rs  generate_test_from_service.rs  mod.rs
src/csharp/: find_class_info.rs  find_constructor_info.rs  find_fields.rs  find_methods.rs  find_namespace.rs  find_parameters.rs  find_properties.rs  get_properties_from_entity.rs  mod.rs  tree_sitter.rs  types.rs
